some changes done