@@ -4,6 +4,7 @@ import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 
+import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.remote.DesiredCapabilities;
 
 import io.appium.java_client.android.AndroidDriver;
@@ -17,24 +18,22 @@ public class AppManagement {
 
 		DesiredCapabilities capabilities = new DesiredCapabilities();
 
-		capabilities.setCapability("deviceName","OnePlus AC2001");
-		capabilities.setCapability("platformname", "Android");     
-		capabilities.setCapability("automationName","uiautomator2");
-		capabilities.setCapability("platformversion", "12");
+		capabilities.setCapability("deviceName","Gangesh");
+        capabilities.setCapability("platformname", "Android");     
+        capabilities.setCapability("automationName","uiautomator2");
+        capabilities.setCapability("platformversion", "12");
 
-
-		URL url = URI.create("http://127.0.0.1:4723/").toURL();
-
-		AndroidDriver driver = new AndroidDriver(url, capabilities);
-		Thread.sleep(2000);
+        AndroidDriver driver = new AndroidDriver(new URL("http://127.0.0.1:4723/wd/hub"), capabilities);
+        Thread.sleep(5000);
+        System.out.println("Application Started");
 
 
 		String packageName = "io.appium.android.apis";
 		
-		driver.terminateApp(packageName);
+		//driver.terminateApp(packageName);
 		
 		//remove app
-		/*driver.removeApp(packageName);
+		//driver.removeApp(packageName);
 		
 		if(!driver.isAppInstalled(packageName))
 		{
@@ -47,7 +46,7 @@ public class AppManagement {
 			System.out.println("App already installed.");
 		
 		//activate the application
-		driver.activateApp(packageName);*/
+		driver.activateApp(packageName);
 		
 		Thread.sleep(2000);
 		driver.quit();//close session
